Update main.sh
re-made the script